Closed
Bug 1266280
Opened 9 years ago
Closed 9 years ago
Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(blocking-b2g:2.5+, b2g-v2.5 fixed)
People
(Reporter: kikuo, Assigned: kikuo)
Details
(Whiteboard: [ft:conndevices])
Attachments
(1 file)
58 bytes,
text/x-review-board-request
|
xeonchen
:
review+
jocheng
:
approval‑mozilla‑b2g44+
|
Details |
[Blocking Requested - why for this release]:
Build failure on https://treeherder.mozilla.org/#/jobs?repo=mozilla-b2g44_v2_5
ImportError: No module named packages.urllib3.poolmanager
Return code: 1
/builds/slave/b2g_m-b44_25_emu_dep-000000000/build/gecko/gfx/layers/basic/GrallocTextureHostBasic.cpp:17:8: error: 'SurfaceFormat' does not name a type
/builds/slave/b2g_m-b44_25_emu_dep-000000000/build/gecko/gfx/layers/basic/GrallocTextureHostBasic.cpp:99:65: error: 'HalFormatToSurfaceFormat' was not declared in this scope
/builds/slave/b2g_m-b44_25_emu_dep-000000000/build/gecko/gfx/layers/basic/GrallocTextureHostBasic.cpp:137:12: error: 'Factory' has not been declared
make[6]: *** [Unified_cpp_gfx_layers3.o] Error 1
make[5]: *** [gfx/layers/target] Error 2
make[5]: *** Waiting for unfinished jobs....
make[4]: *** [compile] Error 2
make[3]: *** [default] Error 2
make[2]: *** [realbuild] Error 2
make[1]: *** [build] Error 2
make: *** [out/target/product/generic/obj/DATA/gecko_intermediates/gecko] Error 2
Return code: 2
failed to build
Running post_fatal callback...
Exiting 2
Assignee | ||
Comment 1•9 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/47981/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/47981/
Attachment #8743645 -
Flags: review?(xeonchen)
Updated•9 years ago
|
Attachment #8743645 -
Flags: review?(xeonchen) → review+
Comment 2•9 years ago
|
||
Comment on attachment 8743645 [details]
[b2g44_v25] MozReview Request: Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r?xeonchen
https://reviewboard.mozilla.org/r/47981/#review44749
LGTM, thank you!
Assignee | ||
Comment 3•9 years ago
|
||
https://reviewboard.mozilla.org/r/47981/#review44749
thanks for review
Assignee | ||
Comment 4•9 years ago
|
||
Comment on attachment 8743645 [details]
[b2g44_v25] MozReview Request: Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r?xeonchen
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): namespace is declared in different chunk in unified build mode.
User impact if declined: Build failure on b2g44 release stabilization repo.
Testing completed: https://treeherder.mozilla.org/#/jobs?repo=try&revision=3c4e7a72ae12
Risk to taking this patch (and alternatives if risky): Should have no risk.
String or UUID changes made by this patch: None
Attachment #8743645 -
Flags: approval‑mozilla‑b2g44?
Comment 5•9 years ago
|
||
Comment on attachment 8743645 [details]
[b2g44_v25] MozReview Request: Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r?xeonchen
Approve for 2.5
Attachment #8743645 -
Flags: approval‑mozilla‑b2g44? → approval‑mozilla‑b2g44+
Updated•9 years ago
|
blocking-b2g: 2.5? → 2.5+
Whiteboard: [ft:conndevices]
Assignee | ||
Updated•9 years ago
|
Attachment #8743645 -
Attachment description: MozReview Request: Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r?xeonchen → [b2g44_v25] MozReview Request: Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r?xeonchen
Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Comment 6•9 years ago
|
||
status-b2g-v2.5:
--- → fixed
Keywords: checkin-needed
Assignee | ||
Updated•9 years ago
|
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•