Bug 1266280 - Build Failure on b2g44_v25, gfx namespace is not used because it is placed into different chunk by unify building.; r=xeonchen a=jocheng

MozReview-Commit-ID: 2nqgtup1tRh